add header and image gallery

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
             <div class="logo">Header Logo</div>
             <ul class="nav">
                 <li>
-                    <a href="#">header link one</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">header link two</a>
+                    <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">header link three</a>
+                    <a href="#">Contact Us</a>
                 </li>     
             </ul>
         </div>
     </nav>
     <header class="header">
         <div class="container">
-            <div>
+            <div class="header-text">
                 <h1>This website is awesome</h1> 
                 <p>
                     This website has some subtext that goes
                     here under the main title. It's a smaller
                     font and the color is lower contrast.
                 </p> 
-                <button>
+                <button class="sign-up-btn">
                     Sign up
                 </button>
             </div>
