--- a/index.html
+++ b/index.html
@@ -75,32 +75,18 @@
 
     <section class="section-2">
         <div class="container">
-            <p>
+            <p class="quote">
                 This is an inspiring quote, or a testimonial
                 from a customer. Maybe it's just filling up
                 space, or maybe people willl actually read it.
                 Who knows? All I know is that it looks nice.
             </p>
-            <p>
+            <p class="author">
                 -Thor, God of Thunder
             </p>
         </div>
     </section>
 
-    <section class="section-3">
-        <div class="container">
-             <div class="big-box">
-                <div>
-                    <p>Call to action! It's time!</p>
-                    <p>
-                        Sign up for our product by
-                        clicking that button right over there!
-                    </p>
-                    <button class="sign-up">Sign up</button>
-                </div>
-             </div>    
-        </div>
-    </section>
     
     <footer class="footer">
         <div class="container">
